--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "vanilla-ninja",
   "private": true,
   "devDependencies": {
-    "gulp": "3.5.x",
-    "gulp-less": "1.2.x",
-    "gulp-sass": "0.7.x",
-    "gulp-coffee": "1.4.x",
-    "gulp-uglify": "0.2.x",
-    "gulp-livereload": "1.2.x",
-    "gulp-concat": "2.1.x",
-    "event-stream": "3.1.x"
+    "gulp": "*",
+    "gulp-less": "*",
+    "gulp-sass": "*",
+    "gulp-coffee": "*",
+    "gulp-uglify": "*",
+    "gulp-livereload": "*",
+    "gulp-concat": "*",
+    "event-stream": "*"
   }
 }
